5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1745_1529.log
== TEST (2019-05-15 14:04:15) 
-- CODE:
Qinf=int(input("Quantidade infantaria: "))
Qcav=int(input("Quantidade cavalaria: "))
Pi=float(input())/100
Pc=float(input())/100
t=0
Qt=0
while(Qt<=50000):
	t=t+1
	Qt= Qinf+(Qinf*Pi)+Qcav+(Qcav*Pc)
print(t)	
-- OUTPUT:
3.7768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:04:50) 
-- CODE:
Qinf=int(input("Quantidade infantaria: "))
Qcav=int(input("Quantidade cavalaria: "))
Pi=float(input())/100
Pc=float(input())/100
t=0
Qt=0
while(Qt<=50000):
	t=t+1
	Qt= Qinf+(Qinf*Pi)+Qcav+(Qcav*Pc)
   print(t)	
-- ERROR:
File "XXXX", line 10
    print(t)	
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:05:08) 
-- CODE:
Qinf=int(input("Quantidade infantaria: "))
Qcav=int(input("Quantidade cavalaria: "))
Pi=float(input())/100
Pc=float(input())/100
t=0
Qt=0
while(Qt<=50000):
	t=t+1
	Qt= Qinf+(Qinf*Pi)+Qcav+(Qcav*Pc)

	print(t)	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:06:17) 
-- CODE:
Qinf=int(input("Quantidade infantaria: "))
Qcav=int(input("Quantidade cavalaria: "))
Pi=float(input())/100
Pc=float(input())/100
t=0
Qt=Qinf+Qcav
while(Qt<=50000):
	t=t+1
	Qt= Qinf+(Qinf*Pi)+Qcav+(Qcav*Pc)

	print(t)	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:08:39) 
-- CODE:
Qinf=int(input("Quantidade infantaria: "))
Qcav=int(input("Quantidade cavalaria: "))
Pi=float(input())/100
Pc=float(input())/100
t=0
Qtinf=Qinf+(Qinf*Pi)
Qtcav=Qcav+(Qcav*Pc)
while(Qtinf+Qtcav<=50000):
	t=t+1
	Qt= Qinf+(Qinf*Pi)+Qcav+(Qcav*Pc)

	print(t)	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:10:39) 
-- CODE:
Qinf=int(input("Quantidade infantaria: "))
Qcav=int(input("Quantidade cavalaria: "))
Pi=float(input())/100
Pc=float(input())/100
t=0
Qtinf=Qinf+(Qinf*Pi)
Qtcav=Qcav+(Qcav*Pc)
while(Qtinf+Qtcav<50000):
	t=t+1
	Qt= Qinf+(Qinf*Pi)+Qcav+(Qcav*Pc)
	if(Qtinf+Qtcav==50000):
		print(t)	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:10:40) 
-- CODE:
Qinf=int(input("Quantidade infantaria: "))
Qcav=int(input("Quantidade cavalaria: "))
Pi=float(input())/100
Pc=float(input())/100
t=0
Qtinf=Qinf+(Qinf*Pi)
Qtcav=Qcav+(Qcav*Pc)
while(Qtinf+Qtcav<50000):
	t=t+1
	Qt= Qinf+(Qinf*Pi)+Qcav+(Qcav*Pc)
	if(Qtinf+Qtcav==50000):
		print(t)	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:11:15) 
-- CODE:
Qinf=int(input("Quantidade infantaria: "))
Qcav=int(input("Quantidade cavalaria: "))
Pi=float(input())/100
Pc=float(input())/100
t=0
Qtinf=Qinf+(Qinf*Pi)
Qtcav=Qcav+(Qcav*Pc)
while(Qtinf+Qtcav<50000):
	t=t+1
	Qt= Qinf+(Qinf*Pi)+Qcav+(Qcav*Pc)

print(t)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:33:25) 
-- CODE:
Qinf=int(input("Quantidade infantaria: "))
Qcav=int(input("Quantidade cavalaria: "))
Pi=float(input())/100
Pc=float(input())/100
t=0
Qtinf=Qinf+(Qinf*Pi)
Qtcav=Qcav+(Qcav*Pc)
while(Qtinf+Qtcav<50000):
	t=t+1
	Qt= Qinf+(Qinf*Pi)+Qcav+(Qcav*Pc)
	if(Qtinf+Qtcav==50000):
		print(t)	
-- EXECUTION TIME:
1368.16
-- TEST CASE 1:
---- input:
8000
6000
1.5
4.0
---- correct output:
45
---- user output:

-- TEST CASE 2:
---- input:
1500
7500
3.2
4.0
---- correct output:
46
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
93400
999
100.0
3.7

---- correct output:
0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:33:26) 
-- CODE:
Qinf=int(input("Quantidade infantaria: "))
Qcav=int(input("Quantidade cavalaria: "))
Pi=float(input())/100
Pc=float(input())/100
t=0
Qtinf=Qinf+(Qinf*Pi)
Qtcav=Qcav+(Qcav*Pc)
while(Qtinf+Qtcav<50000):
	t=t+1
	Qt= Qinf+(Qinf*Pi)+Qcav+(Qcav*Pc)

	print(t)
-- EXECUTION TIME:
1311.89
-- TEST CASE 1:
---- input:
8000
6000
1.5
4.0
---- correct output:
45
---- user output:
Quantidade infantaria: Quantidade cavalaria: 1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
-- TEST CASE 2:
---- input:
1500
7500
3.2
4.0
---- correct output:
46
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
93400
999
100.0
3.7

---- correct output:
0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:33:27) 
-- CODE:
Qinf=int(input("Quantidade infantaria: "))
Qcav=int(input("Quantidade cavalaria: "))
Pi=float(input())/100
Pc=float(input())/100
t=0
Qt=Qinf+Qcav
while(Qt<=50000):
	t=t+1
	Qt= Qinf+(Qinf*Pi)+Qcav+(Qcav*Pc)

	print(t)	
-- EXECUTION TIME:
1648.35
-- TEST CASE 1:
---- input:
8000
6000
1.5
4.0
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 2:
---- input:
1500
7500
3.2
4.0
---- correct output:
46
---- user output:

-- TEST CASE 3:
---- input:
93400
999
100.0
3.7

---- correct output:
0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
